static/css/styles.css
body, html {
    --white: #ffffff;
    --offwhite1: #f9f9f9;
    --offwhite2: #f1f1f1;
    --lightgrey: #ccc;
    --medlightgrey: #999;
    --medgrey: #555;
    --darkgrey: #303030;
    --offblack1: #222222;
    --offblack2: #101010;
    --black: #000000;
    --accent1: #007bff;
    --accent2: #0000ff;
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
    color: var(--offblack1);
    overflow-x: hidden; /* Prevent horizontal scroll */
}

/* header */

.header {
    height: 65px;
    width: 100%;
    display: flex;
    align-items: center;
    background-color: var(--offwhite2);
    padding: 0 10px;
    box-sizing: border-box; /* Ensure padding is included in width calculation */
}

.logo {
    height: 35px;
    margin-right: 5px;
}

.pic-tagger {
    font-size: 26px;
    font-weight: bold;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin-right: 15px;
}

.fa-folder-tree { /* the icon in the header */
    font-size: 22px;
    margin-right: 15px;
}

.search-container {
    flex: 1;
    display: flex;
    justify-content: center; /* Center the search container */
    align-items: center;
}

.search-bar {
    flex-basis: 50%; /* Set the base width to 50% of the container */
    max-width: 500px; /* Optional: Set a maximum width */
    min-width: 120px; /* Optional: Set a minimum width */
    padding: 5px;
}

.filter-button {
    padding: 5px 10px;
    margin-left: 10px;
    margin-right: 10px;
}

.gallery-button {
    height: 25px;
    margin-right: 10px;
}

.settings-icon {
    font-size: 24px;
    margin-right: 10px;
}

.hamburger-icon {
    font-size: 24px;
    margin-right: 10px;
}

.container { /* for search bar */
    display: flex;
    flex: 1;
    overflow: hidden;
}

/* fileTree, main content, and dataPanel */

.file-tree, .main-content, .data-panel {
    overflow-y: auto;
    overflow-x: hidden;
    resize: horizontal;
    position: relative;
}

.file-tree {
    width: 20%;
    background-color: var(--offwhite1);
}

.main-content {
    width: 60%;
    background-color: var(--white);
    flex-grow: 1; /* Allow main content to grow */
}

.data-panel {
    width: 20%;
    background-color: var(--offwhite1);
}

.resizer {
    width: 5px;
    background: var(--lightgrey);
    cursor: ew-resize;
    position: absolute;
    top: 0;
    bottom: 0;
    z-index: 1;
}

#resizer-filetree {
    right: 0;
}

#resizer-datapanel {
    left: 0;
}

/* Gallery */

.masonry-container {
    column-gap: 10px;
    padding: 10px;
}

.imageItem {
    display: inline-block;
    width: 100%;
    margin-bottom: 10px;
    border-radius: 15px;
}

.imageItem img {
    display: block;
    width: 100%;
    border-radius: 15px;
}

/* Adjust column count and width based on screen size */
@media (min-width: 1500px) {
    .masonry-container {
        column-count: 5;
        column-width: 300px;
    }
}

@media (max-width: 1499px) and (min-width: 1200px) {
    .masonry-container {
        column-count: 4;
        column-width: 300px;
    }
}

@media (max-width: 1199px) and (min-width: 900px) {
    .masonry-container {
        column-count: 3;
        column-width: 300px;
    }
}

@media (max-width: 899px) and (min-width: 600px) {
    .masonry-container {
        column-count: 2;
        column-width: 300px;
    }
}

@media (max-width: 599px) {
    .masonry-container {
        column-count: 1;
        column-width: 100%;
    }
}

